test(core): demonstrate behavior of SpEL expression evaluation (#4762)
that uses a non-public constructor/method, and so requires special treatment under java 17.